--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -25,24 +25,23 @@
         <mat-card-content style="text-align: center;">{{project.description}}</mat-card-content>
         <mat-divider></mat-divider>
         <mat-card-actions style="text-align: center">
-          <button mat-button class="card-button">
+          <button mat-button class="card-button" (click)="openDialogEdit(projectList)">
             <mat-icon>edit</mat-icon> Edit
           </button>
-          <button mat-button class="card-button" (click)="onDelete()">
+          <button mat-button class="card-button" (click)="onDeleteSwal(projectList)">
             <mat-icon>delete_forever</mat-icon> Delete
           </button>
         </mat-card-actions>
       </mat-card>
     </div>
-  </div>
+  </div> 
 
-  <swal #deleteSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
-  [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onDelete()">
+</div>
+
+<swal #deleteSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+[showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onDelete()">
 </swal>
 <swal #deletedSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="getAllProject()" [width]="480">
 </swal>
-  
-
-</div>
 
 
