--- a/TimeSheet-Web/src/app/modules/dashboard/edit-project-dialog/edit-project-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/edit-project-dialog/edit-project-dialog.component.html
@@ -1,1 +1,73 @@
-<p>edit-project-dialog works!</p>
+<div class="row headTilteDialog">
+    <h2 mat-dialog-title>Edit Project</h2>
+  </div><br>
+  
+  <form [formGroup]="editProject" (ngSubmit)="onSubmit()">
+    <div class="row mt-3">
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label>Project Code</mat-label>
+      </div>
+      <div class="col-4">
+        <input class="form-control" formControlName="projectCode" disabled>
+      </div>
+  
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label> Project Name</mat-label>
+      </div>
+      <div class="col-4">
+        <input class="form-control" formControlName="projectName"
+          [ngClass]="{'is-invalid': submitted && f.projectName.errors}">
+        <div *ngIf="submitted && f.projectName.errors" class="invalid-feedback">
+          <div *ngIf="f.projectName.errors.required" class="text-danger help-block">
+            {{'Project Name' | mandatoryfield}}
+          </div>
+        </div>
+        <div *ngIf="submitted && f.projectName.errors" class="invalid-feedback">
+          <div *ngIf="f.projectName.errors.whitespace" class="text-danger help-block">
+            {{'Project Name' | mandatoryfield}}
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row mt-3">
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label> Description </mat-label>
+      </div>
+      <div class="col-10">
+        <textarea class="form-control" formControlName="description"
+        [ngClass]="{'is-invalid': submitted && f.description.errors}"></textarea>
+        <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+          <div *ngIf="f.description.errors.required" class="text-danger help-block">
+            {{'Description' | mandatoryfield}}
+          </div>
+        </div>
+        <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+          <div *ngIf="f.description.errors.whitespace" class="text-danger help-block">
+            {{'Description' | mandatoryfield}}
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row mt-3">
+      <div class="col-2 mt-2" style="text-align: right;">
+        <mat-label> User Code Supervisor </mat-label>
+      </div>
+      <div class="col-4">
+        <input class="form-control" formControlName="userCodeSupervisor" disabled>
+      </div>
+    </div>
+  
+    <div mat-dialog-actions class="mt-3" style="float: right;">
+      <button mat-raised-button type="submit" class="btn-submit">Save</button>
+      <a mat-raised-button class="btn-cancle" (click)="canCle(false)">Cancel</a>
+    </div>
+  </form>
+  
+  <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+    [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
+  </swal>
+  <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
+  </swal>
+  
