--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -8,7 +8,7 @@
   
     <div class="row">
       <div class="col-12" style="text-align: right;">
-        <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
+        <button mat-raised-button class="btn-submit">
           <mat-icon>library_books</mat-icon>
           View History
         </button>&nbsp;
@@ -21,41 +21,42 @@
   
     <div class="row mt-3">
       <div class="col-sm-12 col-md-12">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   
           <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
             <td mat-cell *matCellDef="let element"> {{element.date | date: 'yyyy/MM/dd'}} </td>
           </ng-container>
   
           <ng-container matColumnDef="project">
-            <th mat-header-cell *matHeaderCellDef> Project Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
             <td mat-cell *matCellDef="let element"> {{element.project.projectName}} </td>
           </ng-container>
   
           <ng-container matColumnDef="site">
-            <th mat-header-cell *matHeaderCellDef> Site </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Site </th>
             <td mat-cell *matCellDef="let element"> {{element.site}} </td>
           </ng-container>
   
           <ng-container matColumnDef="task">
-            <th mat-header-cell *matHeaderCellDef> Task </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
             <td mat-cell *matCellDef="let element"> {{element.task}} </td>
           </ng-container>
   
           <ng-container matColumnDef="timeIn">
-            <th mat-header-cell *matHeaderCellDef> Time-In </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-In </th>
             <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
           </ng-container>
   
           <ng-container matColumnDef="timeOut">
-            <th mat-header-cell *matHeaderCellDef> Time-Out </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-Out </th>
             <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
           </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
+        <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
       </div>
     </div>
   </div>
