--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-<div class="row">
+<div class="row" *ngIf="isSup" >
   <div class="col-12" style="text-align: right;">
     <button mat-raised-button class="btn-submit" (click)="onDialogAssign()">
       <mat-icon>assignment_return</mat-icon>
@@ -15,7 +15,7 @@
   </div>
 </div>  
 
-  <div class="row">
+  <div class="row" *ngIf="isSup">
     <div class="col-3 mt-3" *ngFor="let project of projectList">
       <mat-card style="cursor: pointer;">
         <mat-card-header style="place-content: center;" (click)="goUserProject(project)">
@@ -32,6 +32,17 @@
             <mat-icon>delete_forever</mat-icon> Delete
           </button>
         </mat-card-actions>
+      </mat-card>
+    </div>
+  </div> 
+
+  <div class="row" *ngIf="!isSup">
+    <div class="col-3 mt-3" *ngFor="let project of projectList">
+      <mat-card style="cursor: pointer;">
+        <mat-card-header style="place-content: center;" (click)="goUserProject(project)">          
+          <mat-card-title class="example-card" >{{project.projectName}}</mat-card-title>          
+        </mat-card-header>
+        <mat-card-content style="text-align: center;">{{project.description}}</mat-card-content>
       </mat-card>
     </div>
   </div> 
