--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.scss
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.scss
@@ -4,6 +4,12 @@
   font-family: "CSChatThai", roboto;
 }
 
+.example-card2{
+  color: rgb(255, 181, 181); 
+  font-size: 22px;
+  font-family: "CSChatThai", roboto;
+}
+
 
 
 
