--- a/TimeSheet-Web/src/app/modules/dashboard/edit-project-dialog/edit-project-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/edit-project-dialog/edit-project-dialog.component.html
@@ -65,7 +65,7 @@
     </div>
   </form>
   
-  <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+  <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#ABEBC6"
     [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
   </swal>
   <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
