--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -8,7 +8,7 @@
 
   <div class="row" *ngIf="isSup" >
     <div class="col-12" style="text-align: right;">
-      <button mat-raised-button class="btn-submit" (click)="openDialogAddUser()">
+      <button mat-raised-button class="btn-submit" (click)="openDialogAddUser(dataUserProject)">
         <mat-icon>assessment</mat-icon>
         Add User Project
       </button>
