--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -139,7 +139,7 @@
   </form>
 </div>
 
-<swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#82dcc3"
+<swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#ABEBC6"
 [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
 </swal>
 <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="getUser()" [width]="480">
