--- a/TimeSheet-Web/src/styles.scss
+++ b/TimeSheet-Web/src/styles.scss
@@ -21,7 +21,7 @@ body {
   background-color: #f4f6f9;
 }
 .btn-submit {
-  background-color: #ABEBC6;
+  background-color: rgb(163, 236, 114);
   color: white;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 #chart-card {
   .mat-card-header {
-    background-color: #ABEBC6 !important;
+    background-color: rgb(163, 236, 114) !important;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     padding: 5px;
@@ -53,7 +53,7 @@ body {
 }
 
 .headTilteDialog {
-  background-color: #ABEBC6;
+  background-color: rgb(163, 236, 114);
   margin: -24px -24px 15px -24px;
   // padding-left: 10px;
 }
