--- a/TimeSheet-Web/src/app/core/app-nev-bar/app-nev-bar.component.scss
+++ b/TimeSheet-Web/src/app/core/app-nev-bar/app-nev-bar.component.scss
@@ -7,7 +7,7 @@
   }
 
   .mat-toolbar {
-    background-color: #ABEBC6;
+    background-color: rgb(163, 236, 114);
     font-family: 'Roboto Mono', monospace;
     color: rgb(82, 67, 66);
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, .15);
@@ -17,7 +17,7 @@
   }
 
   .mat-sidenav {
-    background-color: #ABEBC6;
+    background-color: rgb(163, 236, 114);
     padding: 5px;
     color: white;
     margin: 0 auto;
@@ -31,7 +31,7 @@
 
   .button-style {
     background-color: rgb(82, 67, 66);
-    color: #ABEBC6;
+    color:rgb(163, 236, 114);
     margin-left: 8px;
   }
 
@@ -54,7 +54,7 @@
 
   .header {
     background-color: rgb(231, 231, 231);
-    color: #ABEBC6;
+    color: rgb(163, 236, 114)BEBC6;
     outline: unset;
   }x
 
