--- a/TimeSheet-Web/src/app/modules/login/login.component.scss
+++ b/TimeSheet-Web/src/app/modules/login/login.component.scss
@@ -1,5 +1,5 @@
 .page-login{
-  background-color: #ABEBC6;
+  background-color: rgb(163, 236, 114);
   // height: 100vh;
   width: 100%;
   height: 100%;
