--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -6,7 +6,7 @@
       </div>
     </div>
   
-    <div class="row">
+    <div class="row" *ngIf="!isSup">
       <div class="col-12" style="text-align: right;">
         <button mat-raised-button class="btn-submit">
           <mat-icon>library_books</mat-icon>
@@ -19,8 +19,8 @@
       </div>
     </div>&nbsp;
   
-    <div class="row mt-3">
-      <div class="col-sm-12 col-md-12">
+    <div class="row mt-3" style="text-align: center;">
+      <div class="col-sm-12 col-md-12" >
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   
           <ng-container matColumnDef="date">
