user-project & user-profile & model

--- a/TimeSheet-Web/src/app/modules/user-project/add-user-project-dialog/add-user-project-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/add-user-project-dialog/add-user-project-dialog.component.html
@@ -29,7 +29,7 @@
     </div>
     <div class="col-10">
       <textarea class="form-control" formControlName="task"
-        [ngClass]="{'is-invalid': submitted && f.task.errors}"></textarea>
+        [ngClass]="{'is-invalid': submitted && f.task.errors}" placeholder="List tasks user worked."></textarea>
       <div *ngIf="submitted && f.task.errors" class="invalid-feedback">
         <div *ngIf="f.task.errors.required" class="text-danger help-block">
           {{'task' | mandatoryfield}}
