--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -6,23 +6,24 @@
       </div>
     </div>
   
-    <div class="row" *ngIf="!isSup">
+    <div class="row">
       <div class="col-12" style="text-align: right;">
-        <button mat-raised-button class="btn-submit">
+        <button mat-raised-button class="btn-submit" *ngIf="isSup" (click)="exportAsXLSX()">
           <mat-icon>library_books</mat-icon>
           View History
         </button>&nbsp;
-        <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
+        <button mat-raised-button class="btn-submit" *ngIf="!isSup" (click)="openDialogAdd()">
           <mat-icon>assessment</mat-icon>
           Add Attendance List
         </button>
       </div>
     </div>&nbsp;
+
   
     <div class="row mt-3" style="text-align: center;">
       <div class="col-sm-12 col-md-12" >
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-  
+    
           <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
             <td mat-cell *matCellDef="let element"> {{element.date | date: 'yyyy/MM/dd'}} </td>
