--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
   <div class="col-12" style="text-align: right;">
     <button mat-raised-button class="btn-submit" (click)="onDialogAssign()">
       <mat-icon>assignment_return</mat-icon>
-      Assign Project 
+      Add Project 
   </button>
   </div>
 </div>  
