--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -20,8 +20,8 @@
     </div>&nbsp;
 
   
-    <div class="row mt-3" style="text-align: center;">
-      <div class="col-sm-12 col-md-12" >
+    <div class="row mt-3">
+      <div class="col-sm-12 col-md-12">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     
           <ng-container matColumnDef="date">
