--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.scss
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.scss
@@ -18,24 +18,11 @@ table {
     justify-content: center;
     color: black;
   }
+
+  .textcent{
+    text-align: center;
+  }
   
-
-  // .mat-column-action {
-  //   width: 10;
-  //   text-align: center;
-    
-  // }
-
-  // .mat-column-name{
-  //   width: 10;
-  //   text-align: center;
-  // }
-
-  // .mat-column-no{
-  //   width: 10;
-  //   text-align: center;
-  // }
-
 th{
   background-color: #ced2d6;
 }
