--- a/TimeSheet-Web/src/app/modules/report/report.component.html
+++ b/TimeSheet-Web/src/app/modules/report/report.component.html
@@ -19,7 +19,7 @@
       </div>
     </div>&nbsp;
   
-    <div class="row mt-3" style="text-align: center;">
+    <div class="row mt-3">
       <div class="col-sm-12 col-md-12" >
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
