--- a/TimeSheet-Web/src/app/modules/list-staff/list-staff.component.html
+++ b/TimeSheet-Web/src/app/modules/list-staff/list-staff.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <div class="row mt-3" style="text-align: center;">
+  <div class="row mt-3">
     <div class="col-sm-12 col-md-12">
       <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
