--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -17,7 +17,7 @@
 
 
   <div class="row mt-3">
-    <div class="col-sm-12 col-md-12">
+    <div class="col-sm-12 col-md-12" style="text-align: center;">
       <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
         <ng-container matColumnDef="userCode">
