--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -1,64 +1,78 @@
 <div class="page-main">
 
-    <div class="row">
-      <div class="col-12">
-        <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
-      </div>
-    </div>
-  
-    <div class="row">
-      <div class="col-12" style="text-align: right;">
-        <button mat-raised-button class="btn-submit" *ngIf="isSup" (click)="exportAsXLSX()">
-          <mat-icon>library_books</mat-icon>
-          View History
-        </button>&nbsp;
-        <button mat-raised-button class="btn-submit" *ngIf="!isSup" (click)="openDialogAdd()">
-          <mat-icon>assessment</mat-icon>
-          Add Attendance List
-        </button>
-      </div>
-    </div>&nbsp;
-
-  
-    <div class="row mt-3" style="text-align: center;">
-      <div class="col-sm-12 col-md-12" >
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-    
-          <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.date | date: 'yyyy/MM/dd'}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="project">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.project.projectName}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="site">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Site </th>
-            <td mat-cell *matCellDef="let element"> {{element.site}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="task">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
-            <td mat-cell *matCellDef="let element"> {{element.task}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="timeIn">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-In </th>
-            <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="timeOut">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-Out </th>
-            <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
-          </ng-container>
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
-      </div>
+  <div class="row">
+    <div class="col-12">
+      <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
     </div>
   </div>
-  
+
+  <div class="row">
+    <div class="col-12" style="text-align: right;">
+      <button mat-raised-button class="btn-submit" *ngIf="isSup" (click)="exportAsXLSX()">
+        <mat-icon>library_books</mat-icon>
+        View History
+      </button>&nbsp;
+      <button mat-raised-button class="btn-submit" *ngIf="!isSup" (click)="openDialogAdd()">
+        <mat-icon>assessment</mat-icon>
+        Add Attendance List
+      </button> &nbsp;
+      <!-- <input   [(ngModel)]="dateIn" class="form-control" [matDatepicker]="pickerStart">
+        <div class="input-group-append">
+          <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+          <mat-datepicker #pickerStart></mat-datepicker>
+        </div> -->
+
+      <input matInput [matDatepicker]="dp" [formControl]="dateTest">
+      <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+      <mat-datepicker #dp startView="multi-year" (yearSelected)="chosenYearHandler($event)"
+        (monthSelected)="chosenMonthHandler($event, dp)" panelClass="example-month-picker">
+      </mat-datepicker>
+    </div>&nbsp;
+    <button mat-raised-button class="btn-submit" *ngIf="isSup" (click)="inquiryListStaff()">
+      <mat-icon>assessment</mat-icon>
+      Search
+    </button>
+  </div>&nbsp;
+
+
+  <div class="row mt-3" style="text-align: center;">
+    <div class="col-sm-12 col-md-12">
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.date | date: 'yyyy/MM/dd'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="project">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.project.projectName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="site">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Site </th>
+          <td mat-cell *matCellDef="let element"> {{element.site}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="task">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
+          <td mat-cell *matCellDef="let element"> {{element.task}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="timeIn">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-In </th>
+          <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="timeOut">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-Out </th>
+          <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
+    </div>
+  </div>
+</div>
