--- a/TimeSheet-Web/src/app/modules/report/report.component.scss
+++ b/TimeSheet-Web/src/app/modules/report/report.component.scss
@@ -24,6 +24,22 @@ th{
 }
 tr:nth-child(even) {background-color: #f2f2f2;}
 
+.example-card{
+  color: rgb(163, 236, 114); 
+  font-size: 32px;
+  font-family: "CSChatThai", roboto;
+}
+
+.example-card2{
+  color: rgb(255, 181, 181); 
+  font-size: 22px;
+  font-family: "CSChatThai", roboto;
+}
+
+
+
+
+
 
 
 
