--- a/TimeSheet-Web/src/app/modules/report/report.component.html
+++ b/TimeSheet-Web/src/app/modules/report/report.component.html
@@ -5,64 +5,16 @@
         <div> <a style="font-size: 1.75rem;">Report List</a></div>
       </div>
     </div>
-  
-    <div class="row">
-      <div class="col-12" style="text-align: right;">
-        <button mat-raised-button class="btn-submit"(click)="goViewStaff()">
-          <mat-icon>library_books</mat-icon>
-          View Staff
-        </button>&nbsp;
-        <button mat-raised-button class="btn-submit" (click)="openDialogAdd()">
-          <mat-icon>assessment</mat-icon>
-          Add Report
-        </button>
-      </div>
-    </div>&nbsp;
-  
-    <div class="row mt-3">
-      <div class="col-sm-12 col-md-12" >
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-          <ng-container matColumnDef="userCode">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> User Code </th>
-            <td mat-cell *matCellDef="let element"> {{element.user.userCode}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="startDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.startDate | date: 'yyyy/MM/dd'}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="endDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.endDate | date: 'yyyy/MM/dd'}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="totalHours">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Hours </th>
-            <td mat-cell *matCellDef="let element"> {{element.totalHours}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="task">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
-            <td mat-cell *matCellDef="let element"> {{element.task}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="feedBack">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> FeedBack </th>
-            <td mat-cell *matCellDef="let element"> {{element.feedBack}} </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="goal">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Goal </th>
-            <td mat-cell *matCellDef="let element"> {{element.goal}} </td>
-          </ng-container>
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
+    <div class="row">
+      <div class="col-3 mt-3">
+        <mat-card style="cursor: pointer;">         
+          <mat-card-header style="place-content: center;" (click)="goViewStaff()">
+            <mat-card-title class="example-card">SiteName</mat-card-title>
+          </mat-card-header>         
+        </mat-card>
       </div>
     </div>
+
   </div>
   
